--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -202,6 +202,24 @@
                                                 </tr>
                                             </table>
                                         </div>
+                                    </div>
+
+                                </div>
+
+                            </div>
+                            <div class="col-sm-12 col-lg-4">
+
+                                <div class="card mb-3">
+                                    <h5 class="card-header">Aliases</h5>
+                                    <div class="card-body">
+
+                                        {{ if gt (len .Aliases) 0 }}
+                                            {{ range $key, $value := .Aliases }}
+                                                <span class="badge badge-success" data-toggle="tooltip" data-placement="top" title="{{ .GetTime }}">{{ .PlayerName }}</span>
+                                            {{ end }}
+                                        {{ else }}
+                                            <p class="m-0">None</p>
+                                        {{ end }}
 
                                     </div>
                                 </div>
