Fix stats cursor

--- a/cmd/webserver/assets/sass/_stats.scss
+++ b/cmd/webserver/assets/sass/_stats.scss
@@ -13,6 +13,8 @@
     }
 
     #release-dates, #client-players2 {
-        cursor: ew-resize;
+        .highcharts-background {
+            cursor: ew-resize;
+        }
     }
 }
