Add recent games title

--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -605,6 +605,7 @@
                         </div>
 
                         {{/* Recent Games */}}
+                        <h5>Recently Played Games</h5>
                         <div class="table-responsive">
                             <table class="table table-hover table-striped table-counts mb-4" data-row-type="games" data-path="/players/{{ .Player.ID }}/recent.json" id="recent-games">
                                 <thead class="thead-light">
