--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -73,25 +73,13 @@
                             <div class="col-sm-12 col-md-6 col-lg-4">
 
                                 <div class="card mb-3">
-                                    <h5 class="card-header">Stats</h5>
+                                    <h5 class="card-header">Details</h5>
                                     <div class="card-body p-0">
                                         <div class="table-responsive">
                                             <table class="table table-no-border mb-0">
                                                 <tr data-link-tab="badges">
                                                     <th scope="col" nowrap="nowrap">Level</th>
                                                     <td><a href="/experience/{{ .Player.Level }}">{{ comma .Player.Level }}</a></td>
-                                                </tr>
-                                                <tr data-link-tab="games">
-                                                    <th scope="col" nowrap="nowrap">Games</th>
-                                                    <td>{{ comma .Player.GamesCount }}</td>
-                                                </tr>
-                                                <tr data-link-tab="friends">
-                                                    <th scope="col" nowrap="nowrap">Friends</th>
-                                                    <td>{{ comma .Player.FriendsCount }}</td>
-                                                </tr>
-                                                <tr data-link-tab="badges">
-                                                    <th scope="col" nowrap="nowrap">Badges</th>
-                                                    <td>{{ comma .Player.BadgesCount }}</td>
                                                 </tr>
                                                 <tr>
                                                     <th scope="col" nowrap="nowrap">Comments</th>
@@ -101,20 +89,6 @@
                                                     <th scope="col" nowrap="nowrap">Playtime</th>
                                                     <td>{{ .Player.GetPlaytimeShort "" 3 }}</td>
                                                 </tr>
-                                            </table>
-                                        </div>
-                                    </div>
-
-                                </div>
-
-                            </div>
-                            <div class="col-sm-12 col-md-6 col-lg-4">
-
-                                <div class="card mb-3">
-                                    <h5 class="card-header">Details</h5>
-                                    <div class="card-body p-0">
-                                        <div class="table-responsive">
-                                            <table class="table table-no-border mb-0">
                                                 <tr>
                                                     <th scope="col" nowrap="nowrap">On Steam</th>
                                                     <td>
@@ -146,10 +120,6 @@
                                                     <th scope="col" nowrap="nowrap">Last Updated</th>
                                                     <td><span data-toggle="tooltip" data-placement="top" title="{{ .Player.GetUpdatedNice }}" data-livestamp="{{ .Player.GetUpdatedUnix }}">{{ .Player.GetUpdatedNice }}</span></td>
                                                 </tr>
-                                                <tr data-link-tab="groups">
-                                                    <th scope="col" nowrap="nowrap">Groups</th>
-                                                    <td>{{ comma .Player.GroupsCount }}</td>
-                                                </tr>
                                             </table>
                                         </div>
                                     </div>
@@ -157,17 +127,11 @@
                                 </div>
 
                             </div>
-                            <div class="col-sm-12 col-lg-4">
+                            <div class="col-sm-12 col-md-6 col-lg-4">
 
                                 <div class="card mb-3">
-                                    <h5 class="card-header cursor-pointer" data-toggle="collapse" data-target="#bans-collapse">
-                                        Bans
-                                        {{ if not .Player.Bans.History }}
-                                            : None <i class="fas fa-check text-success"></i>
-                                        {{ end }}
-                                    </h5>
-                                    <div class="card-body collapse p-0 {{ if .Player.Bans.History }}show{{ end }}" id="bans-collapse">
-
+                                    <h5 class="card-header">Bans</h5>
+                                    <div class="card-body p-0">
                                         <div class="table-responsive">
                                             <table class="table table-no-border mb-0">
                                                 <tr>
