Add achievements to players list

--- a/cmd/webserver/templates/players.gohtml
+++ b/cmd/webserver/templates/players.gohtml
@@ -79,8 +79,9 @@
                             <th scope="col">Last VAC Ban</th>
                             <th scope="col">Friends</th>
                             <th scope="col">Comments</th>
-                            <th scope="col"></th> {{/* Link */}}
                             <th scope="col">Achievements</th>
+                            <th scope="col">Completed</th>
+                            <th scope="col"></th> {{/* Link */}}
                         </tr>
                         </thead>
                         <tbody>
