--- a/cmd/webserver/templates/_players_header.gohtml
+++ b/cmd/webserver/templates/_players_header.gohtml
@@ -11,6 +11,7 @@
                 <li class="nav-item"><a class="nav-link" href="/players#games" role="tab"><i class="fas fa-users"></i> Games</a></li>
                 <li class="nav-item"><a class="nav-link" href="/players#bans" role="tab"><i class="fas fa-users"></i> Bans</a></li>
                 <li class="nav-item"><a class="nav-link" href="/players#profile" role="tab"><i class="fas fa-users"></i> Profile</a></li>
+                <li class="nav-item"><a class="nav-link" href="/players#achievements" role="tab"><i class="fas fa-users"></i> Achievements</a></li>
 
                 <li class="nav-item ml-auto"><span class="nav-link active" role="tab"><i class="fas fa-plus-circle"></i> Add Player</span></li>
 
@@ -20,6 +21,7 @@
                 <li class="nav-item"><a class="nav-link" href="#games" role="tab"><i class="fas fa-users"></i> Games</a></li>
                 <li class="nav-item"><a class="nav-link" href="#bans" role="tab"><i class="fas fa-users"></i> Bans</a></li>
                 <li class="nav-item"><a class="nav-link" href="#profile" role="tab"><i class="fas fa-users"></i> Profile</a></li>
+                <li class="nav-item"><a class="nav-link" href="#achievements" role="tab"><i class="fas fa-users"></i> Achievements</a></li>
 
                 <li class="nav-item ml-auto"><a class="nav-link" href="/players/add" role="tab"><i class="fas fa-plus-circle"></i> Add Player</a></li>
 
