--- a/cmd/webserver/templates/groups.gohtml
+++ b/cmd/webserver/templates/groups.gohtml
@@ -57,6 +57,7 @@
                         <tr>
                             <th scope="col" class="thin">#</th>
                             <th scope="col">Name</th>
+                            <th scope="col">Primaries</th>
                             <th scope="col">Members</th>
                             <th scope="col">Trend</th>
                             <th scope="col" class="thin" data-toggle="tooltip" data-placement="top" title="Search Score">#</th>
