--- a/cmd/webserver/templates/admin/_admin_header.gohtml
+++ b/cmd/webserver/templates/admin/_admin_header.gohtml
@@ -12,6 +12,14 @@
             </li>
 
             <li class="nav-item">
+                {{if endsWith .Path "/users" }}
+                    <span class="nav-link active" role="tab">Users</span>
+                {{else}}
+                    <a class="nav-link" href="/admin/users" role="tab">Users</a>
+                {{end}}
+            </li>
+
+            <li class="nav-item">
                 {{if endsWith .Path "/queues" }}
                     <span class="nav-link active" role="tab">Queues</span>
                 {{else}}
