--- a/cmd/webserver/templates/admin/_admin_header.gohtml
+++ b/cmd/webserver/templates/admin/_admin_header.gohtml
@@ -20,6 +20,14 @@
             </li>
 
             <li class="nav-item">
+                {{if endsWith .Path "/patreon" }}
+                    <span class="nav-link active" role="tab">Patreon</span>
+                {{else}}
+                    <a class="nav-link" href="/admin/patreon" role="tab">Patreon</a>
+                {{end}}
+            </li>
+
+            <li class="nav-item">
                 {{if endsWith .Path "/queues" }}
                     <span class="nav-link active" role="tab">Queues</span>
                 {{else}}
