Hide trending for now

--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -148,7 +148,7 @@
                             <a class="dropdown-item" href="/games/upcoming">Upcoming</a>
                             {{/*<a class="dropdown-item" href="/games/sales">On Sale</a>*/}}
                             <a class="dropdown-item" href="/games/new-releases">New Releases</a>
-                            <a class="dropdown-item" href="/games/trending">Trending</a>
+                            {{/*<a class="dropdown-item" href="/games/trending">Trending</a>*/}}
                             <a class="dropdown-item" href="/games/achievements">Most Achievements</a>
                             <a class="dropdown-item" href="/games/wishlists">Most Wishlists</a>
                             <a class="dropdown-item" href="/games/random">Random Game</a>
