Hide youtube for now

--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -341,14 +341,15 @@
                                                 <td>Average Playtime <small>(On Game DB)</small></td>
                                                 <td>{{ .App.GetPlaytimeAverage }}</td>
                                             </tr>
-                                            <tr>
-                                                <td>Youtube Views</td>
-                                                <td id="youtube-max-views"></td>
-                                            </tr>
-                                            <tr>
-                                                <td>Youtube Comments</td>
-                                                <td id="youtube-max-comments"></td>
-                                            </tr>
+                                            {{/*Todo, explain what these values are*/}}
+                                            {{/*                                            <tr>*/}}
+                                            {{/*                                                <td>Youtube Views</td>*/}}
+                                            {{/*                                                <td id="youtube-max-views"></td>*/}}
+                                            {{/*                                            </tr>*/}}
+                                            {{/*                                            <tr>*/}}
+                                            {{/*                                                <td>Youtube Comments</td>*/}}
+                                            {{/*                                                <td id="youtube-max-comments"></td>*/}}
+                                            {{/*                                            </tr>*/}}
                                             </tbody>
                                         </table>
                                     </div>
