--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -161,7 +161,14 @@
                 </div>
 
                 <div class="card mb-4" id="updated-players">
-                    <h5 class="card-header">Latest Updated</h5>
+
+                    <div class="card-header">
+                        <h5 class="mb-0">
+                            Latest Updated
+                            <span class="badge badge-secondary float-right" id="live-badge">Live</span>
+                        </h5>
+                    </div>
+
                     <div class="card-body p-0">
 
                         <div class="table-responsive">
