Fix groups search sorting

--- a/cmd/webserver/templates/groups.gohtml
+++ b/cmd/webserver/templates/groups.gohtml
@@ -13,7 +13,7 @@
                 <div class="col-sm-12 col-lg-6">
 
                     <div class="input-group input-group-lg mt-1 mb-2">
-                        <input class="form-control" type="search" placeholder="Search for a Group" id="search" name="search" autofocus data-col-sort="4">
+                        <input class="form-control" type="search" placeholder="Search for a Group" id="search" name="search" autofocus data-col-sort="5">
                         <label for="search" class="sr-only sr-only-focusable">Search for a Group</label>
                         <div class="input-group-append">
                             <input type="submit" value="Search" class="input-group-text">
@@ -61,7 +61,7 @@
                             <th scope="col">Members</th>
                             <th scope="col">Trend</th>
                             <th scope="col" class="thin" data-toggle="tooltip" data-placement="top" title="Search Score">#</th>
-                            <th scope="col" class="thin"></th>
+                            <th scope="col" class="thin"></th> {{/* Link */}}
                         </tr>
                         </thead>
                         <tbody>
