Update donate header

--- a/cmd/webserver/templates/donate.gohtml
+++ b/cmd/webserver/templates/donate.gohtml
@@ -4,9 +4,8 @@
     <div class="container" id="donate-page">
 
         <div class="jumbotron">
-            <h1><i class="fas fa-heart text-danger"></i> Donate</h1>
-            <p class="lead mb-2">{{ .Description }} Donations will go towards a new extra quick site-wide search,
-                high definition charts, tracking every currency, faster hosting & more!</p>
+            <h1><i class="fas fa-heart text-danger"></i> {{ .TitleOnly }}</h1>
+            <p class="lead mb-2">{{ .Description }}</p>
 
             <a class="btn mb-1 mb-sm-0" role="button" href="https://www.patreon.com/bePatron?u=9962078" target="_blank" rel="noopener" style="background-color: #f96854; color: #fff">
                 <i class="fab fa-patreon"></i> Patreon
