--- a/cmd/webserver/assets/sass/_global.scss
+++ b/cmd/webserver/assets/sass/_global.scss
@@ -602,11 +602,14 @@ div.json-hover {
     img {
         max-width: 100%;
         max-height: 300px;
+        display: block;
     }
 
     iframe {
-        width: 100%;
-        height: 577px;
+        display: block;
+        max-width: 100%;
+        height: 315px;
+        width: 560px;
         border: 0;
     }
 }
