Add news section to home

--- a/cmd/webserver/assets/sass/_global.scss
+++ b/cmd/webserver/assets/sass/_global.scss
@@ -659,3 +659,7 @@ div.json-hover {
     text-decoration: underline;
     padding: 0;
 }
+
+i.fa-twitter, svg.fa-twitter {
+    color: rgb(29, 161, 242);
+}
