--- a/cmd/webserver/assets/sass/_home.scss
+++ b/cmd/webserver/assets/sass/_home.scss
@@ -63,6 +63,8 @@ body.dark {
 
     #news {
 
+        min-height: 1000px;
+
         .media {
             display: block;
             border-bottom: 1px solid rgba(0, 0, 0, .1);
