--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -23,10 +23,10 @@
         {{/*        {{ end }}*/}}
 
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 col-lg-8">
 
                 <div class="row" id="panels">
-                    <a class="col-12 col-sm-6 col-lg-4" href="/players">
+                    <a class="col-12 col-sm-6 col-xl-4" href="/players">
                         <div class="card mb-4">
                             <h5 class="card-header"><i class="fas fa-user-friends"></i> Player Ladders</h5>
                             <div class="card-body p-3">
@@ -34,7 +34,7 @@
                             </div>
                         </div>
                     </a>
-                    <a class="col-12 col-sm-6 col-lg-4" href="/games">
+                    <a class="col-12 col-sm-6 col-xl-4" href="/games">
                         <div class="card mb-4">
                             <h5 class="card-header"><i class="fas fa-gamepad"></i> Game Ladders</h5>
                             <div class="card-body p-3">
@@ -42,7 +42,7 @@
                             </div>
                         </div>
                     </a>
-                    <a class="col-12 col-sm-6 col-lg-4" href="/groups">
+                    <a class="col-12 col-sm-6 col-xl-4" href="/groups">
                         <div class="card mb-4">
                             <h5 class="card-header"><i class="fas fa-users"></i> Group Ladders</h5>
                             <div class="card-body p-3">
@@ -50,7 +50,7 @@
                             </div>
                         </div>
                     </a>
-                    <a class="col-12 col-sm-6 col-lg-4" href="/badges">
+                    <a class="col-12 col-sm-6 col-xl-4" href="/badges">
                         <div class="card mb-4">
                             <h5 class="card-header"><i class="fas fa-ribbon"></i> Badge Ladders</h5>
                             <div class="card-body p-3">
@@ -58,7 +58,7 @@
                             </div>
                         </div>
                     </a>
-                    <a class="col-12 col-sm-6 col-lg-4" href="/games">
+                    <a class="col-12 col-sm-6 col-xl-4" href="/games">
                         <div class="card mb-4">
                             <h5 class="card-header"><i class="fas fa-gamepad"></i> Games Database</h5>
                             <div class="card-body p-3">
@@ -66,20 +66,16 @@
                             </div>
                         </div>
                     </a>
-                    <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="col-12 col-sm-6 col-xl-4">
                         <div class="card mb-4">
                             <h5 class="card-header"><i class="fas fa-user"></i> Player Search</h5>
                             <div class="card-body">
                                 <form action="/players/add" method="post">
 
-                                    <div class="input-group">
-                                        <input type="search" class="form-control" id="search" name="search" placeholder="Steam URL / ID" required>
-                                        <label for="search" class="sr-only sr-only-focusable">Steam URL / ID</label>
+                                    <label for="search" class="sr-only sr-only-focusable">Steam URL / ID</label>
+                                    <input type="search" class="form-control mb-1" id="search" name="search" placeholder="Steam URL / ID" required>
 
-                                        <div class="input-group-append">
-                                            <button type="submit" class="btn btn-success" aria-label="Search">Search</button>
-                                        </div>
-                                    </div>
+                                    <button type="submit" class="btn btn-success" aria-label="Search">Search</button>
 
                                 </form>
                             </div>
@@ -88,6 +84,16 @@
                     </div>
                 </div>
 
+            </div>
+            <div class="col-12 col-lg-4">
+
+                <div class="card mb-4">
+                    <h5 class="card-header">News <a href="https://twitter.com/gamedbonline" target="_blank" rel="noopener"><i class="fab fa-twitter float-right"></i></a></h5>
+                    <div class="card-body">
+                        Coming Soon
+                    </div>
+                    <a class="card-footer" href="https://twitter.com/gamedbonline" target="_blank" rel="noopener">@gamedbonline</a>
+                </div>
             </div>
             <div class="col-12 col-sm-6 col-xl-3">
 
@@ -192,22 +198,7 @@
             <div class="col-12">
 
                 <div class="card" id="news">
-                    <h5 class="card-header">News</h5>
-                    <div class="card-body">
-                        <ul class="list-unstyled">
 
-                            {{ range $key, $value := .News }}
-                                <li class="media" data-link="{{ .Link }}">
-                                    <img src="" data-lazy="https://images.weserv.nl/?url={{ .Image }}&output=webp" alt="" data-lazy-alt="{{ .Title }}" class="mr-3 mb-2 img rounded">
-                                    <div class="media-body">
-                                        <h5 class="mt-0 mb-1">{{ .Title }}</h5>
-                                        {{ .Contents }}
-                                    </div>
-                                </li>
-                            {{ end }}
-                        </ul>
-                    </div>
-                    <a href="/news#{{ .NewsID }}" class="card-footer">More Game News</a>
                 </div>
 
             </div>
