--- a/cmd/webserver/templates/_footer.gohtml
+++ b/cmd/webserver/templates/_footer.gohtml
@@ -8,6 +8,7 @@
                 All times UTC.
                 <a href="/terms">Terms</a>.
                 Version <a href="/commits">{{ .GetVersionHash }}</a>.
+                Our <a href="https://twitter.com/gamedbonline" target="_blank" rel="noopener">Twitter <i class="fab fa-twitter"></i></a>.
             </small>
         </div>
     </footer>
